/*
 * $Id: ChangeLog,v 1.725 2011-07-13 03:21:25 declan2005 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-07-12 17:10:00 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    ! fixed problem in fillrect of hbprinter printer mode


2011-07-11 23:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/c_image.c
    ! Fixed ICON images allways loaded as 32x32, now they are loaded
      with their real size.
    ! Fixed ICON images not being show in menu items.

2011-07-11 16:06:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/h_status.prg
    ! Fixed image not shown in statusbar.

2011-07-10 23:37:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/c_image.c
    ! Fixed loading ICON images.

2011-07-10 17:10:00 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_textbox.prg
    * added a call to scrollcaret in caretpos method

2011-07-10 12:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * doc/classes.txt
  * source/h_textbox.txt
  * include/i_windefs.ch
  * include/i_this.ch
  * include/i_window.ch
    + Added ScrollCaret method to TText class.
      Contributed by Sergio Castellari.

2011-07-08 10:34:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * compile_mingw.bat
    ! Fixed _oohg_resconfig.h not being deleted after compiling.

2011-07-06 23:24:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * compile_mingw.bat
    ! Fixed ooHg.res not being compiled when application rc is present.

2011-07-06 18:59 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
  * source/h_tab.prg
    + TControlGroup class added. It allows to manage multiple
      controls at once.

2011-07-06 18:59 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_controlmisc.prg
    ! Fixed _OOHG_UnTransform() when there's no mask.
